fix donate wrap

--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -99,4 +99,8 @@
   .home-container .video-container iframe {
     width: 96vw;
   }
+  .home-container .donate-button-wrap {
+    position: static;
+    margin-top: 35px;
+  }
 }
